Deploy: Mise a jour automatique

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -85,13 +85,13 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
       <div class="nav-menu" id="nav-menu">
         <ul class="nav-list">
           <li class="nav-item">
+            <a href="/nouveaux-medicaments-perdre-poids/" class="nav-link">Perdre du Poids</a>
+          </li>
+          <li class="nav-item">
             <a href="/glp1-cout/" class="nav-link">Prix</a>
           </li>
           <li class="nav-item">
             <a href="/medicaments-glp1/" class="nav-link">Médicaments</a>
-          </li>
-          <li class="nav-item">
-            <a href="/glp1-perte-de-poids/" class="nav-link">Perte de Poids</a>
           </li>
           <li class="nav-item">
             <a href="/effets-secondaires-glp1/" class="nav-link">Effets</a>
@@ -102,6 +102,7 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
           <li class="nav-item dropdown">
             <a href="#" class="nav-link dropdown-toggle">Plus ▼</a>
             <ul class="dropdown-menu">
+              <li><a href="/qu-est-ce-que-glp1/" class="dropdown-link">Qu'est-ce que GLP-1 ?</a></li>
               <li><a href="/experts/" class="dropdown-link">Nos Experts</a></li>
               <li><a href="/guide-beaute-perte-de-poids-glp1/" class="dropdown-link">Guide Gratuit</a></li>
               <li><a href="/glp1-diabete/" class="dropdown-link">Diabète</a></li>
